# taxbird

./: .cvsignore  .gitignore  COPYING.OpenSSL_exception  Makefile.am  README  README.OpenSSL  README.dsig  README.vendor-id  THANKS  about.ui  aclocal.m4  choose-file.ui  choose-template.ui  config.h.in  configure.ac  configure.in  export.ui  libwww.m4  taxbird-print-helper.1  taxbird.1  taxbird.desktop  taxbird.glade  taxbird.gladep  taxbird.spec.in  taxbird.ui  taxbird.xml
debian/: .cvsignore  changelog  control  copyright  docs  rules  taxbird.postinst
perl/: .cvsignore  Makefile.PL  Taxbird.pm  Taxbird.xs  taxbird-commit
perl/Taxbird/: .cvsignore  Makefile.PL  OpenSC.pm  OpenSC.xs  ppport.h
perl/Taxbird/UI/: Commit.glade  Commit.pm  PinCode.glade  PinCode.pm
po/: .cvsignore  Makefile.in.in  POTFILES.in  de.po
src/: .cvsignore  Makefile.am  basics-addresse.scm  basics-datenlieferant.scm  builder.c  builder.h  bundesland-chooser.scm  callbacks.c  callbacks.h  console.c  console.h  dialog.c  dialog.h  digest.c  digest.h  export.c  export.h  export.scm  form.c  form.h  glade.c  glade.h  guile.c  guile.h  interface.c  interface.h  main.c  sigcheck.c  sigcheck.h  sigtest.sig  startup.scm  stesie.pub  steuernummer.scm  storage.scm  taxbird-mark-stable.sh  taxbird-print-helper  taxbird-print-helper.sh  taxbird-sig-makecert.sh  taxbird-sig-update.sh  taxbird-update.sh.in  (+6 more)
src/guile/: .cvsignore  Makefile.am  basics-datenlieferant.scm  bundesland-chooser.scm  console.scm  datenlieferant.scm  datenlieferant.ui  datenlieferant.xml  export.scm  inc-year.scm  kzify  mandverw-chooser.ui  mandverw-stammdaten.ui  mandverw.scm  mandverw.xml  monetary.scm  readline.scm  revalidate.scm  sheettree.scm  startup.scm  steuernummer.scm  storage.scm  string.scm  taxbird.scm  ustsvza-2006.scm  ustsvza-2006.xml  ustsvza-2007-formular.ui  ustsvza-2007-stammdaten.ui  ustsvza-2007.scm  ustsvza-2007.xml  ustsvza-2008.scm  ustsvza-2009.scm  ustsvza-2010.scm  ustsvza-2011.scm  ustsvza-2012.scm  ustva-2005.scm  ustva-2005.xml  ustva-2006.scm  ustva-2006.xml  ustva-2007.scm  (+16 more)
src/guile/autoload/: .gitattributes  19-ustva-2012-stub.scm  20-ustva-2011-stub.scm  21-ustva-2010-stub.scm  22-ustva-2009-stub.scm  23-ustva-2008-stub.scm  24-ustva-2007-stub.scm  25-ustva-2006-stub.scm  26-ustva-2005-stub.scm  69-ustsvza-2012-stub.scm  70-ustsvza-2011-stub.scm  71-ustsvza-2010-stub.scm  72-ustsvza-2009-stub.scm  73-ustsvza-2008-stub.scm  74-ustsvza-2007-stub.scm  75-ustsvza-2006-stub.scm  Makefile.am  debugging.scm  sigtest.scm  steuernummer-test.scm  ustsvza-2006-stub.scm  ustva-2005-stub.scm  ustva-2006-stub.scm
src/guile/signatures/: Makefile.am  sigtest.sig  ustsvza-2006.sig  ustva-2005.sig  ustva-2006.sig
src/pubkeys/: .cvsignore  Makefile.am  stesie.pub
