dnl Process this file with autoconf to produce a configure script.

#AC_INIT(configure.in)
AC_INIT(taxbird, 0.6, [taxbird@taxbird.de])
AM_INIT_AUTOMAKE(taxbird, 0.6, [taxbird@taxbird.de])
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="libgnomeui-2.0 libgtkhtml-2.0 openssl libgeier libglade-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=taxbird
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="de"
AM_GLIB_GNU_GETTEXT

dnl Check for GNU Guile
GUILE_FLAGS
GUILE_MODULE_REQUIRED(ice-9 format)

CFLAGS="$CFLAGS $GPGME_CFLAGS $GUILE_CFLAGS $GLIB_CFLAGS"
LDFLAGS="$LDFLAGS $GPGME_LIBS $GUILE_LDFLAGS $GLIB_LIBS"

dnl Make sure libgeier is new enough ...
AC_CHECK_LIB([geier], [geier_dsig_sign_text],,
	     AC_MSG_ERROR([your libgeier is too old]))

AC_OUTPUT([
Makefile
src/Makefile
src/guile/Makefile
src/guile/autoload/Makefile
src/guile/signatures/Makefile
taxbird.spec
po/Makefile.in
])

