## Process this file with automake to produce Makefile.in

SUBDIRS = autoload

guilestuffdir = $(datadir)/taxbird/guile
guilestuff_DATA = \
	datenlieferant.xml \
	datenlieferant.scm \
	export.scm \
	inc-year.scm \
	mandverw.scm \
	mandverw.xml \
	monetary.scm \
	revalidate.scm \
	sheettree.scm \
	startup.scm \
	steuernummer.scm \
	storage.scm \
	string.scm \
	taxbird.scm \
	ustsvza-2007.xml \
	ustsvza-2007.scm \
	ustsvza-2008.scm \
	ustsvza-2009.scm \
	ustsvza-2010.scm \
	ustva-2007.xml \
	ustva-2007.scm \
	ustva-2008.scm \
	ustva-2009.scm \
	ustva-2010.scm \
	ustva-2010.xml \
	validate.scm \
	versions.scm \
	xml-writer.scm

EXTRA_DIST = $(guilestuff_DATA)
CLEANFILES = *~ *.bak *.xmlp
