## Process this file with automake to produce Makefile.in

SUBDIRS = autoload

guilestuffdir = $(datadir)/taxbird/guile
guilestuff_DATA = \
	datenlieferant.scm \
	datenlieferant.ui \
	export.scm \
	inc-year.scm \
	mandverw.scm \
	mandverw-chooser.ui \
	mandverw-stammdaten.ui \
	monetary.scm \
	revalidate.scm \
	sheettree.scm \
	startup.scm \
	steuernummer.scm \
	storage.scm \
	string.scm \
	taxbird.scm \
	ustsvza-2007.scm \
	ustsvza-2007-stammdaten.ui \
	ustsvza-2007-formular.ui \
	ustsvza-2010.scm \
	ustsvza-2011.scm \
	ustva-2010.scm \
	ustva-2010-schnell.ui \
	ustva-2010-seite_1.ui \
	ustva-2010-stammdaten.ui \
	ustva-2011.scm \
	ustva-2011-schnell.ui \
	ustva-2011-seite_1.ui \
	ustva-2012.scm \
	ustva-2012-seite_1.ui \
	validate.scm \
	versions.scm \
	xml-writer.scm

EXTRA_DIST = $(guilestuff_DATA)
CLEANFILES = *~ *.bak *.xmlp
