## Process this file with automake to produce Makefile.in

SUBDIRS = 

autoloaddir = $(datadir)/taxbird/guile/autoload
autoload_DATA = \
	22-ustva-2009-stub.scm \
	23-ustva-2008-stub.scm \
	24-ustva-2007-stub.scm \
	25-ustva-2006-stub.scm \
	72-ustsvza-2009-stub.scm \
	73-ustsvza-2008-stub.scm \
	74-ustsvza-2007-stub.scm

EXTRA_DIST = $(autoload_DATA) \
	steuernummer-test.scm \
	debugging.scm
