## Process this file with automake to produce Makefile.in

SUBDIRS = 

autoloaddir = $(datadir)/taxbird/guile/autoload
autoload_DATA = \
	20-ustva-2011-stub.scm \
	21-ustva-2010-stub.scm \
	22-ustva-2009-stub.scm \
	23-ustva-2008-stub.scm \
	70-ustsvza-2011-stub.scm \
	71-ustsvza-2010-stub.scm \
	72-ustsvza-2009-stub.scm \
	73-ustsvza-2008-stub.scm

EXTRA_DIST = $(autoload_DATA) \
	steuernummer-test.scm \
	debugging.scm
